--- a/index.html
+++ b/index.html
@@ -5,9 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap" rel="stylesheet"/>
     <title>Flex Cards</title>
 </head>
 <body>
-    
+    <section><h1>Meet Our Team</h1></section>
+    <p class="introduzione">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo voluptatibus repudiandae quis eligendi. Accusamus ut laboriosam facere ratione perferendis quis molestiae, doloremque quos reiciendis, quibusdam voluptatum fugit est commodi error!</p>
+    <main class="container">
+        <div class="flex-container">
+            <div class="item">
+                <img src="male1.png" alt="maschio 1"/>
+                <div class="text-style">
+                    <h3>MARCO BIANCHI</h3>
+                    <p> Designer</p>
+                    <p class="mail">marcobianchi@team.com</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="female1.png" alt="femmina 1"/>
+                <div class="text-style">
+                    <h3>LAURA ROSSI</h3>
+                    <p> Front-end Developer</p>
+                    <p class="mail">laurarossi@team.com</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="male2.png" alt="maschio 2"/>
+                <div class="text-style">
+                    <h3>GIORGIO VERDI</h3>
+                    <p> Back-end Developer</p>
+                    <p class="mail">giorgioverdi@team.com</p>
+                </div>
+            </div>
+        </div>
+        <div class="flex-container">
+            <div class="item">
+                <img src="female2.png" alt="femmina 2"/>
+                <div class="text-style">
+                    <h3>MARTA IPSUM</h3>
+                    <p> SEO Specialist</p>
+                    <p class="mail">martaipsum@team.com</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="male3.png" alt="maschio 3"/>
+                <div class="text-style">
+                    <h3>ROBERTO LOREM</h3>
+                    <p> Project Manager</p>
+                    <p class="mail">robertolorem@team.com</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="female3.png" alt="femmina 3"/>
+                <div class="text-style">
+                    <h3>DANIELA AMET</h3>
+                    <p> Analyst</p>
+                    <p class="mail">danielaamet@team.com</p>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
